# newsletter_service

./: Cargo.toml  Dockerfile  config.yaml
.github/workflows/: ci.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
